--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
-<legend>All users</legend>
-
+<legend>
+  <div class='topic'>All users</div>
+</legend>
 
 <div id="users">
   <%= render 'users' %>
