--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,3 @@
-<%= link_to 'Login with Facebook', '/auth/facebook/' %>
+<% unless user_signed_in? %>
+  <%= link_to 'Login with Facebook', '/auth/facebook/' %>
+<% end %>
