integration with gmaps

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
       </div>
        <%= yield %>
     </div>
+
+    <footer>
+      <%= render 'layouts/footer' %>
+    </footer>
   </div>
 
 </body>
