ability to find current location

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,6 @@
   	  <%= f.text_field :longitude %>
   	  <%= f.text_field :latitude %>
   	<% end %>
-  	<!-- , :type => "number", :step => "any", :min => -180, :max => 180 -->
+    <button class="user_location" type="button" id="locate_me">Locate Me!</button>
   </div>
 </div>
