--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,9 @@
+<legend>
+  <div class='topic'>Gripping the Earth's map</div>
+</legend>
+
+<%= gmaps4rails(@json) %>
+
 <% unless user_signed_in? %>
   <%= link_to 'Login with Facebook', '/auth/facebook/' %>
 <% end %>
