a little share to facebook

--- a/app/assets/stylesheets/users.css.sass
+++ b/app/assets/stylesheets/users.css.sass
@@ -5,12 +5,15 @@
   margin-left: 35px
 
 .user_location
+  width: 113px
+
   input
     width: 100px
     margin-left: 50px
 
   button
-    width: 113px
     margin-left: 50px
 
-
+  #share
+    width: 113px
+    margin-top: 10px
