fb only authentification

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <% else %>
 
           <ul class="nav pull-right">
-            <li><%= link_to "Sign In", new_user_session_path %></li>
+            <li><%= link_to "Log In with Facebook", '/auth/facebook/' %></li>
           </ul>
 
         <% end %>
